--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,11 @@
     },
 
     "permissions": [
+        "http://localhost:3000/"
     ],
 
     "background": {
-        "scripts": [
-            "background.js"
-        ]
+        "scripts": []
     },
 
     "content_scripts": [
@@ -25,5 +24,5 @@
         }
     ],
 
-    "web_accessible_resources": ["game.js"]
+    "web_accessible_resources": ["game.js","config.js"]
 }
