Revert "First Commit"
This reverts commit eaf1c143f8ece33f9e02445760cc6dbe35d4492a.

--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,12 @@
     },
 
     "permissions": [
-        "http://localhost:3000/"
     ],
 
     "background": {
-        "scripts": []
+        "scripts": [
+            "background.js"
+        ]
     },
 
     "content_scripts": [
@@ -24,5 +25,5 @@
         }
     ],
 
-    "web_accessible_resources": ["game.js","config.js"]
+    "web_accessible_resources": ["game.js"]
 }
